RST-216 Fix facilities text wrapping
Hat-tip to Leo who provided the CSS.

--- a/courtfinder/assets-src/stylesheets/styles.scss
+++ b/courtfinder/assets-src/stylesheets/styles.scss
@@ -320,6 +320,11 @@ $small-width: 800px;
   #facilities {
     li {
       clear: both;
+
+      .facility {
+        display: block;
+        overflow: hidden;
+      }
     }
     .icon {
       position: relative;
